<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_SpindleFunctions" Id="{5b975b4f-2b0f-41c4-8831-2699b2ae2e6f}">
    <Declaration><![CDATA[TYPE ST_SpindleFunctions :
	
STRUCT
	
ReadDriveControlCommand		: WORD;
ReadSpeedRefSetpoint		: REAL;
ReadAccel_Decel				: REAL;
SetDriveControlCommand      : WORD;
SetSpeedRefSetpoint         : REAL;
SetAccel_Decel              : REAL;
ErrorCode					: BYTE;
DriveStatus					: BYTE;
OutputFreq					: REAL;
OutputCurrent				: REAL;
DigitalInputSts				: WORD;
AnalogIn1					: WORD;
AnalogIn2					: WORD;
SpeedRefValue				: REAL;
DCBusVoltage				: REAL;
DriveTemp					: REAL;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>